--- a/Java/10-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
+++ b/Java/10-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
@@ -117,3 +117,127 @@ if (状态变量 满足 执行条件) {
 ### 解决数据竞争和竞态条件问题——锁
 
 面对数据竞争和竞态条件问题，该如何保证线程的安全性？其实这两类问题，都可以用互斥这个技术方案，即加锁技术。
+
+## 2 活跃性问题
+
+### 什么是活跃性问题
+
+活跃性问题，指的是**某个操作无法执行下去**。处理常见的死锁，还有活锁和饥饿。
+
+发生“死锁”后线程会互相等待，而且会一直等待下去，在技术上的表现形式是线程永久地“阻塞”了。
+
+### 活锁
+
+**有时线程虽然没有发生阻塞，但仍然会存在执行不下去的情况，这就是所谓的“活锁”**。
+
+死锁活锁本质上是一样的，原因都是临界区获取资源时，并发的多个线程需要获取多个资源，但它们声明资源暂用顺序不一致：加锁有两个资源 A 和 B，线程 1 进入临界区成功获取到 A，线程 2 进入灵界去成功获取到 B，但是当线程 1 尝试获取 B 资源时发现该资源已经被其他线程获取了。同样线程 2 去获取 A 资源时也发现该资源已经被其他线程获取。
+
+- 死锁的情况是，线程 1 和 线程 2，因为都拿不到资源一致等下去，但是永远也等不到。
+- 活锁的情况时，线程 1 释放自己占用的资源 A 去获取 B，线程 2 释放自己占用的资源 B 去获取 A。
+
+活锁：
+
+```log
+P1 lock A
+P2 lock B
+
+start：
+P1 lock B fail    context switch
+P2 lock A fail    context switch
+
+P1 release A
+P2 release B
+
+goto start
+```
+
+具体可以参考[并发问题中活锁（live lock）到底指的是什么？](https://www.zhihu.com/question/20566246)
+
+#### 如何解决活锁问题
+
+解决“活锁”的方案很简单，**线程释放资源时，尝试等待一个随机的时间就可以了**。Raft 这样知名的分布式一致性算法中也用到了这种思想。
+
+### 饥饿
+
+**所谓“饥饿”指的是线程因无法访问所需资源而无法执行下去的情况**。如果线程优先级“不均”，在 CPU 繁忙的情况下，优先级低的线程得到执行的机会很小，就可能发生线程“饥饿”；持有锁的线程，如果执行的时间过长，也可能导致“饥饿”问题。
+
+#### 如何解决饥饿问题
+
+解决“饥饿”问题的方案很简单，有三种方案：
+
+1. 保证资源充足。
+2. 公平地分配资源。
+3. 避免持有锁的线程长时间执行。
+
+这三个方案中，方案一和方案三的适用场景比较有限，因为很多场景下，资源的稀缺性是没办法解决的，持有锁的线程执行的时间也很难缩短。方案二的适用场景相对来说更多一些。
+
+如何公平地分配资源：在并发编程里，主要是使用公平锁。所谓公平锁，是一种先来后到的方案，线程的等待是有顺序的，排在等待队列前面的线程会优先获得资源。
+
+## 3 性能问题
+
+### 锁的过度使用会造成性能问题
+
+- 使用“锁”要非常小心，但是如果小心过度，也可能出“性能问题”。
+- “锁”的过度使用可能导致串行化的范围过大，这样就不能够发挥多线程的优势了，而我们之所以使用多线程搞并发程序，为的就是提升性能。
+
+### 阿姆达尔（Amdahl）定律
+
+串行对性能的影响是怎么样的呢？假设串行百分比是 5%，我们用多核多线程相比单核单线程能提速多少呢？我们可以使用 **阿姆达尔（Amdahl）定律** 来计算，，阿姆达尔定律代表了处理器并行运算之后效率提升的能力，具体公式如下：
+
+```math
+S = 1/((1-p) + (p/n))
+```
+
+- n 可以理解为 CPU 的核数
+- p 可以理解为并行百分比，`(1-p)`即串行百分比。
+
+假设 CPU 的核数（也就是 n）无穷大，那加速比 S 的极限就是 20，也就是说，如果我们的串行率是 5%，那么我们无论采用什么技术，最高也就只能提高 20 倍的性能。
+
+那么串行百分比一般怎么得出来呢？临界区都是串行的，非临界区都是并行的，用单线程执行临界区的时间/用单线程执行(临界区+非临界区)的时间就是串行百分比。
+
+### 使用锁一定要关注性能问题
+
+使用锁的时候一定要关注对性能的影响。 那怎么才能避免锁带来的性能问题呢？这个问题很复杂，Java SDK 并发包里之所以有那么多东西，有很大一部分原因就是要提升在某个特定领域的性能。
+
+从方案层面，我们可以这样来解决这个问题：
+
+1. 既然使用锁会带来性能问题，那最好的方案自然就是使用无锁的算法和数据结构。相关技术有：
+   1. 线程本地存储 (Thread Local Storage, TLS)
+   2. 写入时复制 (Copy-on-write)
+   3. 乐观锁
+   4. 使用无锁的数据结构，比如 JUC 中的 Atomic 系类类。
+2. 减少锁持有的时间。互斥锁本质上是将并行的程序串行化，所以要增加并行度，一定要减少持有锁的时间。相关技术有：
+   1. 使用细粒度的锁，比如 JDK1.8 之前的  ConcurrentHashMap
+   2. 读写锁
+
+### 性能方面的度量指标：吞吐量、延迟和并发量
+
+1. 吞吐量：指的是单位时间内能处理的请求数量。吞吐量越高，说明性能越好。
+2. 延迟：指的是从发出请求到收到响应的时间。延迟越小，说明性能越好。
+3. 并发量：指的是能同时处理的请求数量，一般来说随着并发量的增加、延迟也会增加。所以延迟这个指标，一般都会是基于并发量来说的。例如并发量是 1000 的时候，延迟是 50 毫秒。
+
+## 4 总结
+
+1. 并发编程是一个复杂的技术领域，微观上涉及到原子性问题、可见性问题和有序性问题，宏观则表现为安全性、活跃性以及性能问题。
+2. 在设计并发程序的时候，主要是从宏观出发，也就是要重点关注它的安全性、活跃性以及性能。
+3. 安全性方面要注意数据竞争和竞态条件。
+4. 活跃性方面需要注意死锁、活锁、饥饿等问题。
+5. 性能方面遇到具体问题需要具体分析，根据特定的场景选择合适的数据结构和算法。
+
+**总之：要解决问题，必须先把问题搞清楚**。
+
+## 5 思考
+
+Java 语言提供的 Vector 是一个线程安全的容器，有同学写了下面的代码，你看看是否存在并发问题呢？
+
+```java
+void addIfNotExist(Vector v, Object o){
+
+  if(!v.contains(o)) {
+    v.add(o);
+  }
+
+}
+```
+
+Vector 是线程安全的，但是只提供方法级的线程安全，这里存在竞态条件。
