--- a/Network/01-Basic/什么是代理.md
+++ b/Network/01-Basic/什么是代理.md
@@ -1,10 +1,10 @@
-#  反向代理、正向代理、透明代理
+# 反向代理、正向代理、透明代理
 
 ## 1 正向代理(Forward Proxy)
 
 一般情况下，如果没有特别说明，代理技术默认说的是正向代理技术。关于正向代理的概念如下： 正 向代理(forward)是一个位于客户端【用户A】和原始服务器(origin server)【服务器B】之间的服务器【代理服务器Z】，为了从原始服务器取得内容，用户A向代理服务器Z发送一个请求并指定目标(服务器B)，然后代 理服务器Z向服务器B转交请求并将获得的内容返回给客户端。客户端必须要进行一些特别的设置才能使用正向代理。如下图：
 
-![](index_files/a.jpg)
+![proxy_a](images/proxy_a.jpg)
 
 从上面的概念中，我们看出，文中所谓的正向代理就是代理服务器替代访问方【用户A】去访问目标服务器【服务器B】
 这就是正向代理的意义所在。而为什么要用代理服务器去代替访问方【用户A】去访问服务器B呢？这就要从代理服务器使用的意义说起。
@@ -13,7 +13,7 @@
 
 ### 访问本无法访问的服务器 B
 
-![](index_files/b.jpg)
+![proxy_b](images/proxy_b.jpg)
 
 我们抛除复杂的网络路由情节来看上图，假设图中路由器从左到右命名为R1、R2，假设最初用户A要访问服务器B需要经过R1和R2路由器这样一个路由节点，如果路由器R1或者路由器R2发生故障，那么就无法访问服务器B了。但是如果用户 A让代理服务器Z去代替自己访问服务器B，由于代理服务器Z没有在路由器R1或R2节点中，而是通过其它的路由节点访问服务器B，那么用户A就可以得到服务器B的数据了。现实中的例子就是“翻墙”。不过自从VPN技术被广泛应用外，“翻墙”不但使用了传统的正向代理技术，有的还使用了VPN技术。
 
@@ -29,7 +29,7 @@ Cache（缓存）技术和代理服务技术是紧密联系的（不光是正向
 
 这方面的内容现今使用的还是比较多的，例如一些公司采用ISA SERVER做为正向代理服务器来授权用户是否有权限访问互联网，如下图
 
-![](index_files/c.jpg)
+![proxy_c](images/proxy_c.jpg)
 
 如上图：防火墙作为网关，用来过滤外网对其的访问。假设用户A和用户B都设置了代理服务器，用户A允许访问互联网，而用户B不允许访问互联网（这个在代理服 务器Z上做限制）这样用户A因为授权，可以通过代理服务器访问到服务器B，而用户B因为没有被代理服务器Z授权，所以访问服务器B时，数据包会被直接丢弃。
 
@@ -37,7 +37,7 @@ Cache（缓存）技术和代理服务技术是紧密联系的（不光是正向
 
 我们可以看出服务器B并不知道访问自己的实际是用户A，因为代理服务器Z代替用户A去直接与服务器B进行交互。如果代理服务器Z被用户A完全控制（或不完全控制），会惯以“肉鸡”术语称呼。
 
-![](index_files/d.jpg)
+![proxy_d](images/proxy_d.jpg)
 
 ### 总结
 
@@ -48,8 +48,7 @@ Cache（缓存）技术和代理服务技术是紧密联系的（不光是正向
 
 反向代理（Reverse Proxy）方式是指以代理服务器来接受internet上的连接请求，然后将请求转发给内部网络上的服务器，并将从服务器上得到的结果返回给internet上请求连接的客户端，此时代理服务器对外就表现为一个服务器。
 
-![](index_files/9eefa500-3476-4f79-8873-3ee1dd31d4f5.png)
-
+![proxy_h](images/proxy_h.png)
 
 反向代理正好与正向代理相反，对于客户端而言代理服务器就像是原始服务器，并且客户端不需要进行任何特别的设置。客户端向反向代理的命名空间(name-space)中的内容发送普通请求，接着反向代理将判断向何处(原始服务器)转交请求，并将获得的内容返回给客户端。
 
@@ -57,17 +56,17 @@ Cache（缓存）技术和代理服务技术是紧密联系的（不光是正向
 
 ### 保护和隐藏原始资源服务器
 
-![](index_files/d1528615117292.jpg)
+![proxy_i](images/proxy_i.jpg)
 
 用户A始终认为它访问的是原始服务器B而不是代理服务器Z，但实用际上反向代理服务器接受用户A的应答，从原始资源服务器B中取得用户A的需求资源，然后发送给用户A。由于防火墙的作用，只允许代理服务器Z访问原始资源服务器B。尽管在这个虚拟的环境下，防火墙和反向代理的共同作用保护了原始资源服务器B，但用户A并不知情。
 
 ### 负载均衡
 
-![](index_files/e.jpg)
+![proxy_e](images/proxy_e.jpg)
 
 当反向代理服务器不止一个的时候，我们甚至可以把它们做成集群，当更多的用户访问资源服务器B的时候，让不同的代理服务器Z（x）去应答不同的用户，然后发送不同用户需要的资源。当然反向代理服务器像正向代理服务器一样拥有CACHE的作用，它可以缓存原始资源服务器B的资源，而不是每次都要向原始资源服务器B请求数据，特别是一些静态的数据，比如图片和文件，如果这些反向代理服务器能够做到和用户X来自同一个网络，那么用户X访问反向代理服务器X，就会得到很高质量的速度。这正是CDN技术的核心。如下图
 
-![](index_files/f.jpg)
+![proxy_f](images/proxy_f.jpg)
 
 这里并不是讲解CDN，所以去掉了CDN最关键的核心技术智能DNS。只是展示CDN技术实际上利用的正是反向代理原理这块。
 
@@ -80,11 +79,6 @@ Cache（缓存）技术和代理服务技术是紧密联系的（不光是正向
 
 如果把正向代理、反向代理和透明代理按照人类血缘关系来划分的话。那么正向代理和透明代理是很明显堂亲关系，而正向代理和反向代理就是表亲关系了 。透明代理的意思是客户端根本不需要知道有代理服务器的存在，它改编你的request fields（报文），并会传送真实IP。注意，加密的透明代理则是属于匿名代理，意思是不用设置使用代理了。 透明代理实践的例子就是时下很多公司使用的行为管理软件。如下图
 
-![](index_files/g.jpg)
+![proxy_g](images/proxy_g.jpg)
 
 用户A和用户B并不知道行为管理设备充当透明代理行为，当用户A或用户B向服务器A或服务器B提交请求的时候，透明代理设备根据自身策略拦截并修改用户A或B的报文，并作为实际的请求方，向服务器A或B发送请求，当接收信息回传，透明代理再根据自身的设置把允许的报文发回至用户A或B，如上图，如果透明代理设置不允许访问服务器B，那么用户A或者用户B就不会得到服务器B的数据。
-
----
-## 引用
-
-- 黑马 JavaEE课程28期：第四阶段 Nginx
