--- a/Java/10-极客时间《Java并发编程实战》/03-互斥锁.md
+++ b/Java/10-极客时间《Java并发编程实战》/03-互斥锁.md
@@ -50,6 +50,34 @@ class SafeCalc {
 - 不要拿多个锁来保护一个资源。这样加锁无法保证并发安全。
 - 同一把锁来保护多个资源。这叫粗粒度锁。
 
+### 思考
+
+下面的代码用 synchronized 修饰代码块来尝试解决并发问题，是否正确？
+
+```java
+class SafeCalc {
+
+  long value = 0L;
+
+  long get() {
+    synchronized (new Object()) {
+      return value;
+    }
+  }
+
+  void addOne() {
+    synchronized (new Object()) {
+      value += 1;
+    }
+  }
+}
+```
+
+这样做是没有任何作用的：
+
+1. 每次调用方法 `get()、addOne()` 都创建了不同的锁，相当于无锁。“**一个合理的受保护资源与锁之间的关联关系应该是 N:1**”。只有共享一把锁才能起到互斥的作用。
+2. JVM 开启逃逸分析之后，`synchronized (new Object())` 这行代码在实际执行的时候会被优化掉，也就是说在真实执行的时候，这行代码压根就不存在。
+
 ## 2 如何用一把锁保护多个资源？
 
 ### 保护没有关联关系的多个资源
@@ -88,3 +116,38 @@ class Account {
 ### 原子性的本质
 
 “原子性”的本质是什么？其实不是不可分割，不可分割只是外在表现，其本质是多个资源间有一致性的要求，**操作的中间状态对外不可见**。例如，在 32 位的机器上写 long 型变量有中间状态（只写了 64 位中的 32 位），在银行转账的操作中也有中间状态（账户 A 减少了 100，账户 B 还没来得及发生变化）。所以**解决原子性问题，是要保证中间状态对外不可见**。
+
+### 思考
+
+下面加锁方式是否正确？
+
+```java
+class Account {
+
+  // 账户余额  
+  private Integer balance;
+  // 账户密码
+  private String password;
+  // 取款
+  void withdraw(Integer amt) {
+    synchronized(balance) {
+      if (this.balance > amt){
+        this.balance -= amt;
+      }
+    }
+  }
+
+  // 更改密码
+  void updatePassword(String pw){
+    synchronized(password) {
+      this.password = pw;
+    }
+  }
+}
+```
+
+这样加锁，存在严重的漏洞
+
+1. 余额和秘密都是可变的，锁如果锁发生变化，就意味着失去了互斥功能。
+2. Integer 和 String 类型的对象在 JVM 里面是可能被重用的，除此之外还有 Boolean，重用意味着你的锁可能被其他代码使用，如果其他代码 synchronized(你的锁)，而且不释放，那你的程序就永远拿不到锁，这是隐藏的风险。
+3. 所以我们可以总结出：**锁，应是私有的、不可变的、不可重用的**。
