--- a/Java/10-极客时间《Java并发编程实战》/04-解决死锁.md
+++ b/Java/10-极客时间《Java并发编程实战》/04-解决死锁.md
@@ -273,4 +273,4 @@ public class BreakDeathLock02 {
   - 如果 Account 对象中还有其它业务，比如查看余额、取款等功能，这些功能也是需要加锁的。
   - 如果转账操作很慢，而 apply 很快，这个时候允许 `a->b, c->d` 并行就有优势了。
 
-**所以不能抛开具体的场景去谈性能**。
+所以**不能抛开具体的场景去谈性能**，没有通吃的技术和方案，因为每种技术和方案都是优缺点和适用场景的。
