--- a/Java/10-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
+++ b/Java/10-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
@@ -240,4 +240,18 @@ void addIfNotExist(Vector v, Object o){
 }
 ```
 
-Vector 是线程安全的，但是只提供方法级的线程安全，这里存在竞态条件。
+Vector 是线程安全的，但是只提供方法级的线程安全，即 `contains()` 和 `add()` 方法虽然都是线程安全的，但是组合在一起却不是线程安全的，在这里就存在竞态条件，正确的方式应该是应用面向对象思想，对 Vector 再封装一次：
+
+```java
+class SafeVector{
+
+  private Vector v;
+
+  // 所有公共方法增加同步控制
+  synchronized  void addIfNotExist(Object o){
+    if(!v.contains(o)) {
+      v.add(o);
+    }
+  }
+}
+```
