--- a/Android/03-Android-UI/CustomViews/绘图012-硬件加速.md
+++ b/Android/03-Android-UI/CustomViews/绘图012-硬件加速.md
@@ -91,6 +91,12 @@ public class AvatarView extends View {
 
 setLayerType 在一次完整 draw 过程中是不能修改的，要么有 LayoutType，要么没有 LayoutType。
 
+## 4 总结
+
+- 离屏缓冲是什么：单独的一个绘制 View（或 View 的⼀部分）的区域。
+- `setLayerType()`：对整个 View，不能针对 onDraw() ⾥面的某⼀具体过程，这个方法常用来关闭硬件加速，但它的定位和定义都不只是一个「硬件加速开关」。它的作⽤是为绘制设置一个离屏缓冲，让后面的绘制都单独写在这个离屏缓冲内。如果参数填写 LAYER_TYPE_SOFTWARE，会把离屏缓冲设置为一个 Bitmap ，即使⽤软件绘制来进行缓冲，这样就导致在设置离屏缓冲的同时，将硬件加速关闭了了。但需要知道，这个方法被⽤来关闭硬件加速，只是因为 Android 并没有提供一个便捷的⽅法在 View 级别简单地开关硬件加速⽽已。
+- `saveLayer()`：针对 Canvas，所以在 onDraw() ⾥可以使用 saveLayer() 来圈出具体哪部分绘制要用离屏缓冲。优先使用 `setLayerType()`，如果不满足需求再选择使用 `saveLayer()`。
+
 ---
 ## 引用
 
