--- a/Java/00-Code/Java-Concurrent/Concurrent-Base/src/main/java/com/ztiany/interview/线程题整理.md
+++ b/Java/00-Code/Java-Concurrent/Concurrent-Base/src/main/java/com/ztiany/interview/线程题整理.md
@@ -2,7 +2,7 @@
 
 现有的程序代码模拟产生了16个日志对象，并且需要运行16秒才能打印完这些日志，请在程序中增加4个线程去调用parseLog()方法来分头打印这16个日志对象，程序只需要运行4秒即可打印完这些日志对象。原始代码如下：
 
-```
+```java
 	package read;
 	
 	public class Test {
@@ -39,7 +39,7 @@
 
 现成程序中的Test类中的代码在不断地产生数据，然后交给TestDo.doSome()方法去处理，就好像生产者在不断地产生数据，消费者在不断消费数据。请将程序改造成有10个线程来消费生成者产生的数据，这些消费者都调用TestDo.doSome()方法去进行处理，故每个消费者都需要一秒才能处理完，程序应保证这些消费者线程依次有序地消费数据，只有上一个消费者消费完后，下一个消费者才能消费数据，下一个消费者是谁都可以，但要保证这些消费者线程拿到的数据是有顺序的。原始代码如下：
 
-```
+```java
 	package read;
 	
 	public class Test2 {
@@ -89,7 +89,7 @@
 
 总之，当每个线程中指定的key相等时，这些相等key的线程应每隔一秒依次输出时间值（要用互斥），如果key不同，则并行执行（相互之间不互斥）。原始代码如下：
 
-```
+```java
 	package read;
 
 	//不能改动此Test类	
