--- a/Android/11-Multi-Media/FFmpeg音视频核心技术精讲与实战/00-移动端音视频入门.md
+++ b/Android/11-Multi-Media/FFmpeg音视频核心技术精讲与实战/00-移动端音视频入门.md
@@ -2,7 +2,7 @@
 
 ## 1 直播架构与CDN网络
 
-### 直播架构
+### 1.1 直播架构
 
 泛娱乐化直播：花椒、映客、斗鱼、熊猫TV等娱乐直播，
 
@@ -12,7 +12,7 @@
 
 ![00-2](images/00-2.png)
 
-### CDN 网络
+### 1.2 CDN 网络
 
 - 解决用户访问网络资源慢的问题。
 - 为什么慢？
@@ -26,7 +26,7 @@ CDN 网络构成
 
 ![CDN](images/00-3-CDN.png)
 
-### 搭建简单直播流媒体系统
+### 1.3 搭建简单直播流媒体系统
 
 音视频行业最重要的两个库
 
@@ -59,7 +59,7 @@ CDN 网络构成
 - 狗听觉范围：15Hz-50000Hz
 - 狗发声范围：452Hz-1800Hz
 
-### 音频的量化与编码
+### 2.1 音频的量化与编码
 
 模拟信号-->数字信号
 
@@ -72,7 +72,7 @@ CDN 网络构成
 - 声道数：单声道、双声道、多声道
 - 码率计算：要算一个音频流的码率->`采样率 * 采样大小 * 声道数`
 
-## 音频压缩技术
+### 2.2 音频压缩技术
 
 - 消除冗余数据（有损压缩技术）
 - 哈夫曼无损编码
@@ -94,7 +94,7 @@ CDN 网络构成
 
 ![00-6.png](images/00-6.png)
 
-### 音频编解码器选型
+### 2.3 音频编解码器选型
 
 - 常见的音频编码包括：OPUS、AAC、Vorbis、Speex、iLBC、AMR、G.711 等
 - RTMP 不支持 OPUS，娱乐直播一般使用 AAC。
@@ -103,7 +103,7 @@ CDN 网络构成
 
 ![00-7.png](images/00-7.png)
 
-### AAC介绍
+### 2.4 AAC介绍
 
 AAC -> Advanced Audio COding
 
@@ -116,8 +116,6 @@ AAC -> Advanced Audio COding
 - AAC 包括那些规格：`AAC LC`、`AAC HE V1`、`AAC HE V2`。
 
 AAC 规格描述：
-
-![00-8.png](images/00-8.png)
 
 - AAC LC：Low Complexit 低复杂度，码流 128K。
 - AAC HE：AAC LC + SBR（Spectral Band Replication）
@@ -134,3 +132,91 @@ AAC 编解码库：
 - ffmpeg AAC
 - libfaac
 - libvo_aacenc
+
+## 3 视频基础知识
+
+### 3.1 H264 基本概念
+
+- I帧：关键帧，采用帧内压缩技术。
+- P帧：向前参考帧，压缩时只参考前一帧，属于帧间压缩技术。
+- B帧：双向参考帧，压缩时既参考前一帧也参考后一帧，采用帧间压缩技术，对网络效率要求高。
+
+#### GOF：Group Of Frame
+
+GOF：即一组帧。
+
+#### SPS 与 PPS
+
+- SPS：Sequence Parameter Set，序列参数帧，存放帧数，参考帧数目、解码图形尺寸、帧场编码模式选择标识等。
+- PPS：Picture Parameter Set，图形参数集，存放熵编码模式选择标识、片组数目、初始量化参数和去方法块滤波系数调整标识等。
+
+每个 GOF 之前，会有 SPS/PPS 信息，否则无法解码。SPS 与 PPS 归于 I 帧。
+
+#### 视频花屏/卡顿原因
+
+- 如果 GOF 分组中的 P 帧丢失会造成解码端的图形发生错误。
+- 为了避免花屏问题的发生，一般如果发现 P 帧丢失或者 I 帧丢失，就不显示 GOF 内所有的帧，直到下一个 I 帧来后重新刷新图像。
+
+#### 视频编码器
+
+- x264/x265
+- openH263 支持 SVC（视频分层传输），移动端很多硬件不支持
+- vp8/vp9
+  
+### 3.2 H264 宏块的划分与帧分组
+
+#### H264 压缩技术
+
+- 帧内预测压缩：解决的是空域数据冗余问题
+- 帧间预测压缩：解决的是时域数据冗余问题
+- 整数离散余弦变换（DCT）
+- CABAC 压缩
+
+#### 分块与分组
+
+- 宏块(Macro Block)的划分
+- 子块划分
+- 帧分组
+
+### 3.3 H264 结构与码流
+
+#### H264 编码分层
+
+- NAL 层：Network Abstraction Layer，视频数据网络抽象层，用于网络传输。
+- VCL 层：Video Coding Layer，视频数据编码层。
+
+#### H264 码流概念
+
+- SODB：String Of Data Bits，原始数据比特流，长度不一定是 8 的整数倍，有 VLC 产生。
+- RBSP：Raw Byte Sequence Payload，SODB + trailing bits, 算法是在 SODB 最后一位补 1，不按字节对齐则补 0。
+- EBSP：Encapsulate Byte Sequence Payload
+- NALU：NAL Header(1B) + EBSP
+
+### 3.4 YUV
+
+图像的存储格式：RGB，YUV。
+
+- RGB：PC/手机 采用的图形格式。
+- YUV：电视系统采用的一种演示编码方法，为了兼容电视系统视频都采用 YUV 格式。
+  - Y 明亮度。
+  - UV 标识色度。
+
+常见 YUV 格式：
+
+- YUV 4:2:0
+- YUV 4:2:2
+- YUV 4:4:4
+
+## 4 总结
+
+音视频应该掌握什么技术
+
+- 音视频采集与编码
+- 音视频硬编码硬解码
+- FFMPEG，用于视频处理
+- 视频渲染与OpenGL
+- x264 优化
+- 交叉编译与优化
+- WebRTC
+- 音视频处理架构
+- 网络传输
