--- a/C&CPP/01-C-Basic/00-C学习资料.md
+++ b/C&CPP/01-C-Basic/00-C学习资料.md
@@ -18,3 +18,7 @@
 - [cppreference](http://zh.cppreference.com/w/%E9%A6%96%E9%A1%B5)
 - [awesome-c-cn](https://github.com/jobbole/awesome-c-cn)
 - [C语言编码规范](http://www.jianshu.com/p/0c29795c31fe)
+
+视频教程
+
+- [C++基础教程完整版](http://yun.itheima.com/course/c55.html?hm)
