--- a/Android/11-Multi-Media/FFmpeg音视频核心技术精讲与实战/00-移动端音视频入门.md
+++ b/Android/11-Multi-Media/FFmpeg音视频核心技术精讲与实战/00-移动端音视频入门.md
@@ -150,7 +150,7 @@ GOF：即一组帧。
 - SPS：Sequence Parameter Set，序列参数帧，存放帧数，参考帧数目、解码图形尺寸、帧场编码模式选择标识等。
 - PPS：Picture Parameter Set，图形参数集，存放熵编码模式选择标识、片组数目、初始量化参数和去方法块滤波系数调整标识等。
 
-每个 GOF 之前，会有 SPS/PPS 信息，否则无法解码。SPS 与 PPS 归于 I 帧。
+每个 GOF 之前，会有 SPS/PPS 信息，否则无法解码。SPS 与 PPS 也被归于 I 帧。
 
 #### 视频花屏/卡顿原因
 
@@ -159,9 +159,10 @@ GOF：即一组帧。
 
 #### 视频编码器
 
-- x264/x265
-- openH263 支持 SVC（视频分层传输），移动端很多硬件不支持
-- vp8/vp9
+- x264
+- x265 压缩比更高，占用cpu更多
+- openH263 支持 SVC（视频分层传输），移动端很多硬件不支持，只能使用软编
+- vp8（对标 x264）/vp9（对标 x265）
   
 ### 3.2 H264 宏块的划分与帧分组
 
@@ -169,16 +170,66 @@ GOF：即一组帧。
 
 - 帧内预测压缩：解决的是空域数据冗余问题
 - 帧间预测压缩：解决的是时域数据冗余问题
-- 整数离散余弦变换（DCT）
+- 整数离散余弦变换（DCT）将空间上的相关性变为频域上无关的数据，然后进行量化
 - CABAC 压缩
 
-#### 分块与分组
+#### 宏块分块与分组
 
-- 宏块(Macro Block)的划分
-- 子块划分
-- 帧分组
+宏块(Macro Block)的划分：
+
+![](images/00-8.png)
+
+![](images/00-9.png)
+
+宏块划分后，再次进行子块划分：
+
+![](images/00-18.png)
+
+帧分组（一组之内物体的变化是非常小的，通过一定数学科学进行描述）：
+
+![](images/00-10.png)
+
+#### 组内宏块查找
+
+组内宏块查找-->运动估算-->进行压缩 = （运动矢量 + 残差数据）
+
+![](images/00-11.png)
+
+#### 帧内预测
+
+用于 I 帧，计算帧内残差值。
+
+![](images/00-12.png)
+
+![](images/00-13.png)
+
+#### DCT
+
+整数余弦变换
+
+![](images/00-14.png)
+
+![](images/00-15.png)
+
+#### VLC 压缩
+
+MPEG2使用，类似于`哈夫曼`压缩。
+
+![](images/00-16.png)
+
+#### CBAC 压缩
+
+H.264 使用
+
+![](images/00-17.png)
 
 ### 3.3 H264 结构与码流
+
+#### 结构
+
+`片 -> 宏块 -> 子块`：
+
+![](images/00-19.png)
 
 #### H264 编码分层
 
@@ -187,25 +238,96 @@ GOF：即一组帧。
 
 #### H264 码流概念
 
-- SODB：String Of Data Bits，原始数据比特流，长度不一定是 8 的整数倍，有 VLC 产生。
-- RBSP：Raw Byte Sequence Payload，SODB + trailing bits, 算法是在 SODB 最后一位补 1，不按字节对齐则补 0。
-- EBSP：Encapsulate Byte Sequence Payload
-- NALU：NAL Header(1B) + EBSP
+- SODB：String Of Data Bits，原始数据比特流，长度不一定是 8 的整数倍，由 VCL 层产生。
+- RBSP：Raw Byte Sequence Payload，SODB + trailing bits, 算法是在 SODB 最后一位补 1（结束标志位），不按字节对齐则补 0。
+- EBSP：Encapsulate Byte Sequence Payload：压缩的数据里遇到两个连续的 0x00 就与起始位产生冲突（起始位以 00000001或者000001开始），于是在压缩的数据中遇到两个连续的 0x00 就增加一个 0x03。
+- NALU：NAL Header(1B) + EBSP，在  EBSP 的基础上加一个字节的网络头。
+
+#### NAL Unit
+
+一个 H264 帧至少划分为一个切片，在网络中，如果一帧比较大，就按片进行传输。
+
+![](images/00-20.png)
+
+#### 切片与宏块的关系
+
+![](images/00-22.png)
+
+一个切片有多个宏块：
+
+- mb_type 宏块类型
+- mb_pred 宏块预测
+- coded residual 残差数据
+
+#### H264 切片
+
+![](images/00-21.png)
+
+#### H264码流整体分层
+
+![](images/00-23.png)
+
+### 3.5 NALU：NAL单元
+
+NALU = NAL Header + NAL DATA
+
+#### NAL HEADER
+
+![](images/00-24.png)
+
+#### NAL 类型
+
+![](images/00-29.png)
+
+- 5 标识 I 帧
+- 7 表示 SPS
+- 8 表示 PPS
+  
+![](images/00-30.png)
+
+- 28/29 用于网络传输分片
+
+NAL 类型的分类
+
+- 单一类型：一个 RTP 包只包含一个 NALU（很多P帧/B帧是这种）。
+- 组合类型：一个 RTP 包包括多个 NALU，类型是 24-27，一般 SPS/PPS 就放到一个包中。
+- 分片类型：一个 NALU 单元分成了多个 RTP 包，类型是 28 和 29.
+
+#### 单一类型
+
+![](images/00-25.png)
+
+#### 组合类型
+
+![](images/00-26.png)
+
+#### 分片类型
+
+![](images/00-27.png)
+
+#### FU 的 Header
+
+![](images/00-28.png)
+
+
+S 加上 E，再加上 RTP 包头的序列号，网络传输中就可以确认一个包是否完整到达。
 
 ### 3.4 YUV
 
-图像的存储格式：RGB，YUV。
+图像的存储格式：RGB，YUV也称（YCbCr）。
 
 - RGB：PC/手机 采用的图形格式。
-- YUV：电视系统采用的一种演示编码方法，为了兼容电视系统视频都采用 YUV 格式。
+- YUV：电视系统采用的一种演示编码方法，为了兼容电视系统视频都采用 YUV 格式，摄像机排除的视频都是 YUV 的。
   - Y 明亮度。
   - UV 标识色度。
 
 常见 YUV 格式：
 
-- YUV 4:2:0
+- YUV 4:2:0（最常见）
 - YUV 4:2:2
 - YUV 4:4:4
+
+YUV 4:2:0：并不意味着只有 Y、Cb 两个分量，而没有 Cr 分量，它实际是对每行扫描线来说，只有一种色度分量，它以 2:1 的抽烟率存储。相邻的扫描行存储不同的色度分量，也就是说，如果一行是 `4:2:0`，下一行就是 `4:0:2`，再下一行是 `4:2:0`，以此类推。
 
 ## 4 总结
 
