--- a/Android/11-Multi-Media/FFmpeg音视频核心技术精讲与实战/00-移动端音视频入门.md
+++ b/Android/11-Multi-Media/FFmpeg音视频核心技术精讲与实战/00-移动端音视频入门.md
@@ -1,4 +1,4 @@
-# 移动端音视频入门
+# [移动端音视频入门](https://www.imooc.com/learn/959) 笔记
 
 ## 1 直播架构与CDN网络
 
@@ -225,7 +225,10 @@ H.264 使用
 
 ### 3.3 H264 结构与码流
 
-#### 结构
+#### H264 结构
+
+- 一个视频流多个帧。
+- 每个帧包含多个片。
 
 `片 -> 宏块 -> 子块`：
 
@@ -233,14 +236,16 @@ H.264 使用
 
 #### H264 编码分层
 
-- NAL 层：Network Abstraction Layer，视频数据网络抽象层，用于网络传输。
-- VCL 层：Video Coding Layer，视频数据编码层。
+- VCL 层：Video Coding Layer，视频数据编码层，负责有效表示视频数据的内容。
+- NAL 层：Network Abstraction Layer，视频数据网络抽象层，负责格式化数据并提供头信息，以保证数据适合各种信道和存储介质上的传输。
+
+我们平时的每帧数据就是一个 NAL 单元（SPS与PPS除外）。在实际的 H264 数据帧中，帧前面带有 `00 00 00 01` 或 `00 00 01`分隔符，一般来说编码器编出的首帧数据为 PPS 与 SPS，接着为 I 帧。
 
 #### H264 码流概念
 
 - SODB：String Of Data Bits，原始数据比特流，长度不一定是 8 的整数倍，由 VCL 层产生。
 - RBSP：Raw Byte Sequence Payload，SODB + trailing bits, 算法是在 SODB 最后一位补 1（结束标志位），不按字节对齐则补 0。
-- EBSP：Encapsulate Byte Sequence Payload：压缩的数据里遇到两个连续的 0x00 就与起始位产生冲突（起始位以 00000001或者000001开始），于是在压缩的数据中遇到两个连续的 0x00 就增加一个 0x03。
+- EBSP：Encapsulate Byte Sequence Payload：压缩的数据里遇到两个连续的 0x00 就与起始位产生冲突（起始位以 00000001 或者 000001开始），于是在压缩的数据中遇到两个连续的 0x00 就增加一个 0x03。
 - NALU：NAL Header(1B) + EBSP，在  EBSP 的基础上加一个字节的网络头。
 
 #### NAL Unit
@@ -289,7 +294,7 @@ NALU = NAL Header + NAL DATA
 
 NAL 类型的分类
 
-- 单一类型：一个 RTP 包只包含一个 NALU（很多P帧/B帧是这种）。
+- 单一类型：一个 RTP 包只包含一个 NALU（很多`P帧/B帧`是这种）。
 - 组合类型：一个 RTP 包包括多个 NALU，类型是 24-27，一般 SPS/PPS 就放到一个包中。
 - 分片类型：一个 NALU 单元分成了多个 RTP 包，类型是 28 和 29.
 
@@ -308,7 +313,6 @@ NAL 类型的分类
 #### FU 的 Header
 
 ![](images/00-28.png)
-
 
 S 加上 E，再加上 RTP 包头的序列号，网络传输中就可以确认一个包是否完整到达。
 
