--- a/Java/10-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
+++ b/Java/10-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
@@ -130,7 +130,7 @@ if (状态变量 满足 执行条件) {
 
 **有时线程虽然没有发生阻塞，但仍然会存在执行不下去的情况，这就是所谓的“活锁”**。
 
-死锁活锁本质上是一样的，原因都是临界区获取资源时，并发的多个线程需要获取多个资源，但它们声明资源暂用顺序不一致：加锁有两个资源 A 和 B，线程 1 进入临界区成功获取到 A，线程 2 进入灵界去成功获取到 B，但是当线程 1 尝试获取 B 资源时发现该资源已经被其他线程获取了。同样线程 2 去获取 A 资源时也发现该资源已经被其他线程获取。
+死锁活锁本质上是一样的，原因都是临界区获取资源时，并发的多个线程需要获取多个资源，但它们声明资源暂用顺序不一致：加锁有两个资源 A 和 B，线程 1 进入临界区成功获取到 A，线程 2 进入临界去成功获取到 B，但是当线程 1 尝试获取 B 资源时发现该资源已经被其他线程获取了。同样线程 2 去获取 A 资源时也发现该资源已经被其他线程获取。
 
 - 死锁的情况是，线程 1 和 线程 2，因为都拿不到资源一致等下去，但是永远也等不到。
 - 活锁的情况时，线程 1 释放自己占用的资源 A 去获取 B，线程 2 释放自己占用的资源 B 去获取 A。
