--- a/C&CPP/01-C-Basic/01-C语言简介.md
+++ b/C&CPP/01-C-Basic/01-C语言简介.md
@@ -36,3 +36,17 @@ C 的第一个标准是由 ANSI 发布的。虽然这份文档后来被国际标
 - **C11**：在 2011 年 12 月，ANSI采纳了 ISO/IEC 9899:2011 标准。这个标准通常即 C11，它是C程序语言的现行标准。
 
 >ANSI(American National Standards Institute)即美国国家标准学会，是负责制定美国国家标准的非营利组织
+
+---
+## 4 C 语言编译器
+
+- gcc：<https://gcc.gnu.org/>
+- clang：<https://clang.llvm.org/>
+- visual c++：微软
+- intel c++
+
+相关参考：
+
+- [Clang 比 GCC 好在哪里？](https://www.zhihu.com/question/20235742)
+- [Clang vs Other Open Source Compilers](http://clang.llvm.org/comparison.html)
+- [Comparison of Diagnostics between GCC and Clang](https://link.zhihu.com/?target=http%3A//gcc.gnu.org/wiki/ClangDiagnosticsComparison)
