--- a/C&CPP/02-CPP-Basic/01-概述.md
+++ b/C&CPP/02-CPP-Basic/01-概述.md
@@ -27,12 +27,18 @@ C++的版本：
 ---
 ## 2 C++编译器
 
-- gcc：https://gcc.gnu.org/
-- llvm clang：http://llvm.org/
+- gcc：<https://gcc.gnu.org/>
+- clang：<https://clang.llvm.org/>
 - visual c++：微软
 - intel c++
 
-大多数的 C++ 编译器并不在乎源文件的扩展名，但是如果未指定扩展名，则默认使用 `.cpp`。
+相关参考：
+
+- [Clang 比 GCC 好在哪里？](https://www.zhihu.com/question/20235742)
+- [Clang vs Other Open Source Compilers](http://clang.llvm.org/comparison.html)
+- [Comparison of Diagnostics between GCC and Clang](https://link.zhihu.com/?target=http%3A//gcc.gnu.org/wiki/ClangDiagnosticsComparison)
+
+>注意：大多数的 C++ 编译器并不在乎源文件的扩展名，但是如果未指定扩展名，则默认使用 `.cpp`。
 
 ---
 ## 3 面向对象的C++
