--- a/C&CPP/02-CPP-Basic/02-基础语法.md
+++ b/C&CPP/02-CPP-Basic/02-基础语法.md
@@ -17,8 +17,7 @@ int main(){
 ---
 ## 名称空间
 
-名称空间让厂商能够将其产品封装在一个叫做名称空间的单元中，这样就可以使用名称空间来指定想使用哪个厂商的产品。
-`using`编译指令用于指定使用那个名称空间。
+名称空间让厂商能够将其产品封装在一个叫做名称空间的单元中，这样就可以使用名称空间来指定想使用哪个厂商的产品。`using`编译指令用于指定使用那个名称空间。
 
 类、函数和变量是C++编译器的标准组件，它们都被放置在名称空间`std`中。使用组件时需要指定名称空间：
 
@@ -37,7 +36,6 @@ namespace spaceA{
 ```
 
 注意，头文件中不应该使用类似`using namespace std;`的声明，因为头文件的内容会被拷贝到其他文件中去，可能会引起冲突。
-
 
 ---
 ## 输入输出
@@ -103,13 +101,12 @@ C++ 中有两种类型的表达式：
 int g = 20;
 ```
 
-
 ---
 ## 关键字
 
-
 C++ 保留了一组词用作该语言的关键字。关键字不能用作程序的标识符。下表列出了 C++ 所有的关键字：
-```
+
+```cpp
 asm    do    if    return    try
 auto    double    inline    short    typedef
 bool    dynamic_cast    int    signed    typeid
@@ -122,14 +119,14 @@ const    false    private    template    void
 const_cast    float    protected    this    volatile
 continue    for    public    throw    wchar_t
 default    friend    register    true    while
-delete    goto    reinterpret_cast        
+delete    goto    reinterpret_cast
 ```
 
 C++ 还保留了一些词用作各种操作符的替代名。这些替代名用于支持某些不支持标准 C++操作符号集的字符集。它们也不能用作标识符：
 
-```
+```cpp
 and    bitand    compl    no    or_eq    xor_eq
-and_eq    bitor    not    or    xor    
+and_eq    bitor    not    or    xor
 ```
 
 除了关键字，C++ 标准还保留了一组标识符用于标准库。 **标识符不能包含两个连续的下划线，也不能以下划线开头后面紧跟一个大写字母。有些标识符（在函数外定义的标识符）不能以下划线开头** 
