--- a/Android/10-HotFix&Plugin/01-插件化与热修复学习.md
+++ b/Android/10-HotFix&Plugin/01-插件化与热修复学习.md
@@ -79,6 +79,7 @@
 - [Android 热修复你想知道的一切都在这里了](https://juejin.im/entry/58df77baac502e4957872346)
 - [最全面的Android热修复技术](https://blog.csdn.net/u010299178/article/details/52031505)
 - [Android 热修复专题：支付宝、淘宝、微信、QQ空间、饿了么、美丽说蘑菇街、美团大众点评方案集合](https://zhuanlan.zhihu.com/p/25863920)
+- [如何5分钟让你的 SDK 拥有热修复能力（原理篇）](https://juejin.im/post/5da546b35188254796426ae3)
 
 ### 2 框架
 
