--- a/Java/10-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
+++ b/Java/10-极客时间《Java并发编程实战》/06-安全性、活跃性以及性能问题.md
@@ -51,7 +51,9 @@ public class Test {
 
 ### 安全性问题——竞态条件
 
-不是简单地加锁就能避免所有并发问题，参考下面程序：
+不是简单地加锁就能避免所有并发问题：
+
+- 示例 1：
 
 ```java
 public class Test {
@@ -66,7 +68,6 @@ public class Test {
     count = v;
   }
 
-
   void add10K() {
     int idx = 0;
     while(idx++ < 10000) {
@@ -77,7 +78,34 @@ public class Test {
 }
 ```
 
-这个程序也不是安全的，`set(get() + 1)` 存在安全隐患，虽然我们给所有访问 count 的地方都加了锁，避免了数据竞争，但是程序的正确性依赖于线程的执行顺序，如果两个线程是先后执行 `set(get()+1)` 那么程序结构是正确的，但如果两个线程同时执行了 `get()+1` 再去 `set()`， 那程序结果就是错误的，丢失了一次 `+1` 操作，这种问题，叫 **竞态条件（Race Condition）**，即 **程序的执行结果依赖线程执行的顺序**。
+这个程序也不是安全的，`set(get() + 1)` 存在安全隐患，虽然我们给所有访问 count 的地方都加了锁，避免了数据竞争，但是程序的正确性依赖于线程的执行顺序，如果两个线程是先后执行 `set(get()+1)` 那么程序结构是正确的，但如果两个线程同时执行了 `get()+1` 再去 `set()`， 那程序结果就是错误的，丢失了一次 `+1` 操作。
+
+- 实例 2：
+
+```java
+//获取库存数量
+lock.lock();
+int count = getInventory(merchandiseId)
+lock.unlock();
+
+//库存大于等于购买
+lock.lock();
+boolean isBuy = count >= purchaseQuantity;
+lock.unlock();
+if(isBuy) {
+  //生成订单
+  lock.lock();
+  //库存-1
+  lock.unlock();
+  //出库......
+}else {
+  throw new MerchandHungerException("库存不足");
+}
+```
+
+以上代码在多线程执行时并不会出现数据竞争，因为不会有多个线程同时对数据进操作，所以对数据的操作都只会有一个线程，但其还是存在竟态条件的，因为这些共享数据还是会在某个线程没有持有锁的情况下会被其它线程修改，导致当前获得的状态是失效的。该例子参考自：[什么是竞态条件？什么是数据竞争？](http://www.spring4all.com/article/806)
+
+这类问题，叫 **竞态条件（Race Condition）**，即 **程序的执行结果依赖线程执行的顺序**。
 
 #### 转账中的竞态条件
 
