--- a/Java/08-Java-High-Concurrent-Course/10-多线程并发拓展.md
+++ b/Java/08-Java-High-Concurrent-Course/10-多线程并发拓展.md
@@ -93,7 +93,7 @@ public class DeadLock implements Runnable {
 
 增加处理器数、计算负载分布到更多处理器上，以此来提高计算速度，而程序中**可并行代码的比例**决定你增加处理器（总核心数）所能带来的速度提升的上限，公式：
 
-```
+```java
 //a：并行计算部分所占比例。
 //n：并行处理结点个数。
 S= 1/(1- a + a/n)
@@ -103,7 +103,6 @@ S= 1/(1- a + a/n)
 - 当 `a=0` 时（即只有串行，没有并行），最小加速比 `s=1`；
 - 当 `n→∞` 时，极限加速比 `s→ 1/(1-a)`，这也就是加速比的上限。
 - 若串行代码占整个代码的 `25%`，则并行处理的总体性能不可能超过 4
-
 
 ---
 ## 3 HashMap 和 ConcurrentHashMap 数据结构
@@ -139,5 +138,3 @@ Java 8：废弃分段锁，采用单一数组 + 红黑树
 ## 4 多线程并发实践总结
 
 ![](index_files/09f3eaa9-6c23-4724-b441-39852c21d611.jpg)
-
-
