--- a/DSA/01-Basic/C1-复杂度分析.md
+++ b/DSA/01-Basic/C1-复杂度分析.md
@@ -1,6 +1,6 @@
-[C++基础教程完整版](http://yun.itheima.com/course/275.html) 学习记录
+# 数据结构与算法-C语言描述
 
-# 数据结构与算法-C语言描述 1
+[C++基础教程完整版](http://yun.itheima.com/course/275.html) 数据结构部分学习记录。
 
 ---
 ## 1 数据结构概念
