--- a/Java/05-Concurrent/05-极客时间《Java并发编程实战》/11-并发工具.md
+++ b/Java/05-Concurrent/05-极客时间《Java并发编程实战》/11-并发工具.md
@@ -263,8 +263,8 @@ Java 在 1.8 这个版本里，提供了一种叫 StampedLock 的锁，它的性
 
 ReadWriteLock 支持两种模式：**一种是读锁，一种是写锁**。而 StampedLock 支持三种模式，分别是：**写锁、悲观读锁和乐观读**。
 
-- 相同之处：写锁、悲观读锁的语义和 ReadWriteLock 的写锁、读锁的语义非常类似，允许多个线程同时获取悲观读锁，但是只允许一个线程获取写锁，写锁和悲观读锁是互斥的。
-- 不同之处：StampedLock 里的写锁和悲观读锁加锁成功之后，都会返回一个 stamp；然后解锁的时候，需要传入这个 stamp。
+- **相同之处**：写锁、悲观读锁的语义和 ReadWriteLock 的写锁、读锁的语义非常类似，允许多个线程同时获取悲观读锁，但是只允许一个线程获取写锁，写锁和悲观读锁是互斥的。
+- **不同之处**：StampedLock 里的写锁和悲观读锁加锁成功之后，都会返回一个 stamp；然后解锁的时候，需要传入这个 stamp。
 
 ```java
 final StampedLock sl =  new StampedLock();
@@ -455,7 +455,9 @@ void moveIfAtOrigin(double newX, double newY){
 
 ## 4 CountDownLatch 与 CyclicBarrier
 
-### 优化最近越来越慢的对账系统
+### 优化越来越慢的对账系统
+
+场景：随着业务发展，发现目前的对账系统越来越慢。
 
 对账系统描述：用户通过在线商城下单，会生成电子订单，保存在订单库；之后物流会生成派送单给用户发货，派送单保存在派送单库。为了防止漏派送或者重复派送，对账系统每天还会校验是否存在异常订单。
 
