--- a/Android/10-HotFix&Plugin/01-插件化与热修复学习.md
+++ b/Android/10-HotFix&Plugin/01-插件化与热修复学习.md
@@ -45,7 +45,14 @@
 
 ## 2 热修复
 
-**插件化和热修复**不是同一个概念，虽然站在技术实现的角度来说，有很多相通的技术点，但是它们的出发点是不一样的：
+**插件化和热修复**不是同一个概念，热修复的背景：
+
+- 刚发布的版本出现了严重的Bug，这就需要去解决Bug、测试打包重新发布，这会耗费大量的人力和物力，代价比较大。
+- 已经更正了此前发布版本的Bug，如果下个版本是大版本，那么两个版本之间间隔时间会很长，这样要等到下个大版本发布再修复Bug，而之前版本的Bug会长期的影响用户。
+- 版本升级率不高，并且需要长时间来完成版本迭代，前版本的Bug就会一直影响不升级的用户。
+- 有一些小但是很重要的功能需要在短时间内完成版本迭代，比如节日活动。
+
+虽然从技术实现的角度来说，有很多相通的技术点，但是它们的出发点是不一样的：
 
 - **插件化**：把需要实现的模块或功能当做一个插件独立提取出来，减少 **宿主** 的规模，当需要使用到相应的功能时再去加载相应的插件模块。由一个宿主程序加多个插件模块组成。
 - **热修复**：从修复 bug 的角度出发，强调的是在不需要二次发版安装应用的前提下修复已知的线上 bug。
@@ -57,6 +64,17 @@
 - 热修复：立即生效，不需要重启 App 或者 Activity
 - 暖修复：重启 Activity 后修复生效
 - 冷修复：重启 App 后修复生效
+
+热修复技术方案
+
+- dex修复：
+  - 底层替换方案：在已加载的类中直接替换原有方法，是在原有类的基础上进行修改，无法实现对原有类进行方法和字段的增减，这样会破坏原有类的结构。最大问题是不稳定性，直接修改虚拟机方法实体的具体字段来实现的。Android是开源的，不同的手机厂商开源对代码进行修改，所以像Andfix就会出现在部分机型上的热修复失效的现象。
+  - 类加载方案。
+  - 编译期插桩方案。
+- so 修复（so 的加载与 class 的加载类似，都是通过 DexPathList 进行最终加载的）：
+  - 提前加载方案：下载到修复的 so 后，调用 `System.load()` 提前加载修复后的so。
+  - hook LoadedApk 方案：hook ActivityThread 中的 LoadedApk，应用的 ClassLoader 是在 LoadedApk 中初始化的，所有的加载路径均由 LoadedApk 指定。
+- 资源修复：hook AssetManager。
 
 ## 3 学习博客
 
