--- a/C&CPP/01-C-Basic/20-文件读写.md
+++ b/C&CPP/01-C-Basic/20-文件读写.md
@@ -177,6 +177,10 @@ fputs() 函数接受两个参数：
 
 该函数根据传入地址找到的字符串写入指定的文件中。和 puts() 函数不同，fputs() 在打印字符串时不会在其末尾添加换行符。由于fgets() 保留了换行符，fputs() 就不会再添加换行符。
 
+返回值:
+
+若成功则返回写出的字符个数, 返回EOF 则表示有错误发生.
+
 ### 读写二进制文件
 
 ```c
